--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
     "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
